# lib/db/src/schema/index.ts
@@ -2,3 +2,5 @@ export * from "./categories";
 export * from "./products";
 export * from "./sales";
 export * from "./stockMovements";
+export * from "./suppliers";
+export * from "./purchaseOrders";
